--- a/myFirstSubject/app_model/templates/index.html
+++ b/myFirstSubject/app_model/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,4 +10,6 @@ app_model_indexq
 <h5>保存成功</h5>
 {{ name }}
 </body>
+<script src="{%  static "js/static.js" %}"></script>
+
 </html>
