--- a/myFirstSubject/app_model/templates/register.html
+++ b/myFirstSubject/app_model/templates/register.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-index
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">提交 </button>
+</form>
 </body>
 </html>
