--- a/myFirstSubject/templates/app_blog/base.html
+++ b/myFirstSubject/templates/app_blog/base.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-index
+{% block title %}
+    title
+{% endblock %}
+{% block bodyBlock %}
+    body
+{% endblock %}
 </body>
 </html>
